<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DataInputActivity$PlaceholderFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/lab_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lab_intro"
                android:id="@+id/labInfo"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lab_cycletime"
                android:id="@+id/CycletimeLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:imeOptions="actionDone"
                android:onClick="onEditTextClicked"
                android:tag="cycletime"
                android:id="@+id/CycletimeEdit"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lab_cycletime_mean"
                android:id="@+id/CycletimeMeanLabel"/>

            <EditText
                android:id="@+id/CycletimeMeanEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:onClick="onEditTextClicked"
                android:tag="CycletimeMean"
                android:text="25" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lab_cycletime_std"
                android:id="@+id/CycletimeSTDLabel"/>

            <EditText
                android:id="@+id/CycletimeSTDEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:onClick="onEditTextClicked"
                android:tag="CycletimeSTD"
                android:text="5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lab_malaria"
                android:id="@+id/MalariaLabel"/>

            <RadioGroup
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_positive"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="malaria1:1"
                    android:id="@+id/MalariaYesBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_negative"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="malaria1:0"
                    android:id="@+id/MalariaNoBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_na"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:tag="malaria1:na"
                    android:id="@+id/MalariaNABtn"/>
            </RadioGroup>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>