<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    tools:context=".GuidelinesActivity">

    <LinearLayout
        android:id="@+id/recommendations_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_severity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/score"
                    android:onClick="onRiskButtonClick"
                    android:text="@string/severity_score_no_data"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/data"
                    android:onClick="onDataButtonClick"
                    android:text="@string/enter_patient_data"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/recommendations_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMainGreen"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/guidelines_help_message"
                android:textAlignment="center"
                android:textColor="#F0F0F0" />

        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/recommendations_list_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</FrameLayout>

